# sphinx-datatables

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: publish.yml  push_docs.yml  pytest.yml  test.yml  test_build.yml
docs/: build.sh  conf.py  configuration.rst  examples.rst  index.rst  introduction.rst
src/sphinx_datatables/: __init__.py  activate_datatables.js  activate_datatables.js.in  config.py  directives.py  js.py  sphinx_datatables.py
test/: __init__.py  conftest.py  test_directives.py  test_sphinx_datatables.py
